# lvgl-car

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  lv_conf.h
docker/: Dockerfile_DEBIAN
src/: account.c  account.h  main.c  mymain.c  ui_arc_auto_decrease.c  ui_arc_auto_decrease.h  ui_turn_signal.c  ui_turn_signal.h  video_play.c  video_play.h
src/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/UI/components/: ui_comp_hook.c
src/UI/fonts/: ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_Font45.c  ui_font_Font5.c  ui_font_Font7.c
src/UI/images/: ui_img_560741373.c  ui_img_faguangtiao_png.c  ui_img_fill_1_png.c  ui_img_icon_back_png.c  ui_img_icon_play_png.c  ui_img_icon_playlist_png.c  ui_img_icon_skip_next_png.c  ui_img_icon_skip_prev_png.c  ui_img_right6_png.c  ui_img_ring_left_small_png.c  ui_img_ring_right_small_png.c  ui_img_seatbelt_big_png.c  ui_img_shace_png.c  ui_img_sudupan_png.c  ui_img_youm_png.c  ui_img_zhuangshi_png.c
src/UI/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h
src/lib/display_backends/: fbdev.c
